--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_map: ^4.0.0
+  geolocator: ^9.0.2
+  flutter_compass: ^0.7.0
 
 dev_dependencies:
   flutter_test:
